@@ -1,6 +1,9 @@
 * 2006-02-05 Jeremy Sanders <jeremy@jeremysanders.net>
   - Fixed bug where linked datasets may not work in saved files
   - Key positioning improved in the case of no border
+  - Reorganising some of the Dataset/LinkedFile code
+  - Backend CSV importing done
+  - Added ImportFileCSV command
 	
 * 2006-02-04 Jeremy Sanders <jeremy@jeremysanders.net>
   - Add a few more plot symbols
